--- a/main/NovoAluno.html
+++ b/main/NovoAluno.html
@@ -11,7 +11,7 @@
         <div class = "header">
             <nav class = "nav_bar">
                 <ul class = "barGroup">
-                    <li class = "navBarItem"><img class="iconeNav" src  = "img/arrowBack.png"></li>
+                    <li class = "navBarItem"><a href="DadosEscola.html"><img class="iconeNav" src  = "img/arrowBack.png"></a></li>
                     <li class = "navBarItem">Configurações</li>
                     <li class = "navBarItem">Sobre</li>
                     <li class = "navBarItem">Ajuda</li>
