--- a/main/DadosEscola.html
+++ b/main/DadosEscola.html
@@ -14,6 +14,7 @@
                 <ul class = "barGroup">
                     <li class = "navBarItem"><a href="Home.html"><img class="iconeNav" src  = "img/arrowBack.png"></a></li>
                     <li class = "navBarItem">Configurações</li>
+                    <li class = "navBarItem" style="cursor: pointer;" onclick="removeEscola()">Deletar escola</li>
                     <li class = "navBarItem">Sobre</li>
                     <li class = "navBarItem">Ajuda</li>
                 </ul>
